--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,11 +24,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   circular_check_box: ^1.0.1
-
+  page_transition: ^1.1.5
+  dio: ^3.0.8
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  dio: ^3.0.8
 
 
 # For information on the generic Dart part of this file, see the
