--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   page_transition: ^1.1.5
   dio: ^3.0.8
   qr_flutter: ^3.2.0
+  qrscan: ^0.2.17
   
 dev_dependencies:
   flutter_test:
